--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>JavaScript Project</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>JavaScript Project</h1>
+    <h1 id="header">JavaScript Project</h1>
+    <script src="main.js"></script>
   </body>
 </html>
