Zmiana zakresu (nie działa)
Signed-off-by: Adrian Juszczak <adrian@juszczak.io>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <h1 id="header">JavaScript Project</h1>
+    <div>
+      <label>
+        <span>From</span>
+        <input id="from-date" type="date" />
+      </label>
+      <label>
+        <span>To</span>
+        <input id="end-date" type="date" />
+      </label>
+    </div>
     <canvas id="canvas"></canvas>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
