Gold price chart
Signed-off-by: Adrian Juszczak <adrian@juszczak.io>

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div>
       <label>
         <span>From</span>
-        <input id="from-date" type="date" />
+        <input id="from-date" type="date" value="2022-01-01" />
       </label>
       <label>
         <span>To</span>
-        <input id="end-date" type="date" />
+        <input id="end-date" type="date" value="2022-02-13" />
       </label>
     </div>
     <canvas id="canvas"></canvas>
