--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <h1 id="header">JavaScript Project</h1>
 
     <section>
+      <h2>News</h2>
+      <div id="news-list"></div>
+    </section>
+
+    <section>
       <h2>Translate</h2>
       <div>
         <label>
