--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <h1 id="header">JavaScript Project</h1>
 
     <section>
+      <h2>Weather</h2>
+      <div id="geo"></div>
+      <div id="weather"></div>
+    </section>
+
+    <section>
       <h2>News</h2>
       <div id="news-list"></div>
     </section>
