--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
     <section>
       <h2>Weather</h2>
       <div id="geo"></div>
-      <div id="weather"></div>
+      <div id="weather">
+        <div id="weather-loader" class="loader">Loading...</div>
+      </div>
     </section>
 
     <section>
       <h2>News</h2>
-      <div id="news-list"></div>
+      <div id="news-list">
+        <div id="news-loader" class="loader">Loading...</div>
+      </div>
     </section>
 
     <section>
