--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
-    <div class="curiosity"></div>
 
+    <section class="upper-right">
+
+    <h2>Witaj! Dziś jest <span class="day"></span>. Czy wiesz, że...</h2>
+        <div class="curiosity"></div>
+
+    </section>
 
     <script src="main.js"></script>
 </body>
