--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 					<div class="left">
 						<input type="number" class="base-amount" placeholder="Wpisz wartość" min="0">
 						<select id="currency-one">
-							<option value="PLN" selected>PLN</option>
-							<option value="EUR">EUR</option>
+							<option value="EUR" selected>EUR</option>
 							<option value="USD">USD</option>
 							<option value="GBP">GBP</option>
 							<option value="CHF">CHF</option>
 							<option value="JPY">JPY</option>
+							<option value="PLN">PLN</option>
 						</select>
 					</div>
 
@@ -48,10 +48,10 @@
 				</button>
 					
 				<div class="right">
-					<input type="number" class="converted-amount">
+					<input type="number" class="converted-amount" min="0">
 					<select id="currency-two">
-						<option value="PLN">PLN</option>
-						<option value="EUR" selected>EUR</option>
+						<option value="PLN" selected>PLN</option>
+						<option value="EUR">EUR</option>
 						<option value="USD">USD</option>
 						<option value="GBP">GBP</option>
 						<option value="CHF">CHF</option>
