hiding total, add info,color buttons,  instruction

--- a/calculator.html
+++ b/calculator.html
@@ -6,9 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="author" content="Adam Matusiak">
-	<meta name="keywords" content="weather application, curious facts">
+	<meta name="keywords" content="Exchange Rate Converter, curious facts">
 	<meta name="description"
-		content="Page showing the weather in chosen localisation, curious facts from the world. The page contains currency convert and day organiser applications.">
+		content="The page contains currency convert and curious facts from the world.">
 
 	<title>Currency Exchange Rate</title>
 
@@ -26,6 +26,15 @@
 
 	<section class="converter">
 		<div class="wrapper">
+			<div class="info">
+				<i class="fa-solid fa-palette"></i>
+				<i class="fa-solid fa-circle-info"></i>
+			</div>
+			<div class="colors">
+				<div class="first color"></div>
+				<div class="second color"></div>
+				<div class="third color"></div>
+			</div>
 			<h1>Exchange Rate Converter</h1>
 
 			<div class="converter-body">
@@ -60,6 +69,18 @@
 
 			<p class="rate-info"></p>
 			<p class="total"></p>
+		</div>
+
+		<div class="explanation">
+			<div class="modal">
+				<h3>Instrukcja:</h3>
+				<p>1. Wybierz z menu rozwijanego z lewej strony walutę którą chcesz kupić</p>
+				<p>2. Wybierz z menu rozwijanego z prawej strony walutę którą chcesz wymienić</p>
+				<p>3. Przyciskiem możesz zamienić wybrane wcześniej waluty</p>
+				<p>Przyciskiem <i class="fa-solid fa-palette"></i> wybierz kolorystykę </p>
+				<p>Życzymy samych udanych transakcji !</p>
+				<button class="close">Zamknij</button>
+			</div>
 		</div>
 	</section>
 
