add footer, instruction panel, changes to buttons

--- a/calculator.html
+++ b/calculator.html
@@ -24,7 +24,7 @@
 
 <body>
 
-	<section class="converter">
+	
 		<div class="wrapper">
 			<div class="info">
 				<i class="fa-solid fa-palette"></i>
@@ -71,20 +71,31 @@
 			<p class="total"></p>
 		</div>
 
-		<div class="explanation">
-			<div class="modal">
-				<h3>Instrukcja:</h3>
-				<p>1. Wybierz z menu rozwijanego z lewej strony walutę którą chcesz kupić</p>
-				<p>2. Wybierz z menu rozwijanego z prawej strony walutę którą chcesz wymienić</p>
-				<p>3. Przyciskiem możesz zamienić wybrane wcześniej waluty</p>
-				<p>Przyciskiem <i class="fa-solid fa-palette"></i> wybierz kolorystykę </p>
-				<p>Życzymy samych udanych transakcji !</p>
-				<button class="close">Zamknij</button>
-			</div>
+		
+
+
+	<div class="explanation">
+		<div class="modal">
+			<h3>Instrukcja:</h3>
+			<p>1. Wybierz z menu rozwijanego z lewej strony walutę którą chcesz kupić</p>
+			<p>2. Wybierz z menu rozwijanego z prawej strony walutę którą chcesz wymienić</p>
+			<p>3. Przyciskiem możesz zamienić wybrane wcześniej waluty</p>
+			<p>Przyciskiem <i class="fa-solid fa-palette"></i> wybierz kolorystykę </p>
+			<p class="wishes">Życzymy samych udanych transakcji !</p>
+			<button class="close">Zamknij</button>
 		</div>
-	</section>
+	</div>
 
-
+	<footer>
+		<p>&copy; Converter Sp. z o.o.
+			<span class="icon-box">
+				<a href="#"><i class="fa-brands fa-facebook"></i></a>
+				<a href="#"><i class="fa-brands fa-twitter"></i></a>
+				<a href="#"><i class="fa-brands fa-instagram"></i></a>
+				<a href="#"><i class="fa-brands fa-linkedin"></i></a>
+			</span>
+		</p>
+	</footer>
 
 	<script src="main2.js"></script>
 </body>
