add color change, curiosity, new fonts

--- a/calculator.html
+++ b/calculator.html
@@ -14,15 +14,20 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto+Condensed:wght@300;400&display=swap"
-		rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Sansita+Swashed:wght@300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style-calculator.css" />
 	
 		<script src="https://kit.fontawesome.com/e4b4fec820.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+	<div class="news">
+		<h2>Witaj! Dziś jest <span class="day"></span>. Czy wiesz, że...</h2>
+		<div class="curiosity"></div>
+	</div>
 
 	
 		<div class="wrapper">
