Get movies, get suggested movies

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Emilia" />
     <link rel="stylesheet" href="/style.css" />
-    <title>My JS Project</title>
+    <title>Movie App</title>
   </head>
 
   <body>
@@ -30,7 +30,11 @@
     <div id="movieList"></div>
     <div id="currentClickedMovieId"></div>
 
-    <h4>Collection suggested movies:</h4>
+    <h4>
+      <!-- from genres of movie wchich was clicked -->
+      Collection suggested movies
+    </h4>
+    <div id="suggestedResultsList"></div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="/main.js"></script>
