wstępne stylowanie, początkowy kod js, drzewo DOM

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css"> 
+    <title>Book search</title>
 </head>
 <body>
-    
+<main>
+    <div class="backgroundCover">
+        <img class="cover" src="background.jpg">
+    </div>
+    <div>
+        <img class="logo" src="logo booksearch.png">
+    </div>
+    <div id="Div-to-search">
+        <textarea id="Text-to-search"></textarea>
+    </div>
+    <div id="Search-div">
+        <button id="Search">Search</button>
+    </div>
+</main>
+<script src="main.js"></script>
 </body>
 </html>
