--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         <img class="cover" src="background.jpg">
     </div>
     <div>
-        <img class="logo" src="logo booksearch.png">
+        <img id="logo" src="logo booksearch.png">
     </div>
     <div id="Div-to-search">
         <textarea id="Text-to-search"></textarea>
     </div>
     <div id="Search-div">
         <button id="Search">Search</button>
+    </div>
+    <div id="Results">
     </div>
 </main>
 <script src="main.js"></script>
