start pagination, style movie details, add module scripts

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 
     <h2>Movies find for you</h2>
     <div id="results-movies" class="results-movies"></div>
+
+    <div class="prev-btn" id="previous"></div>
+    pages
+    <div id="current-page"></div>
+    of
+    <div id="total-pages"></div>
+    <div class="next-btn" id="next"></div>
+
     <div id="clicked-movie-id"></div>
 
     <h4>
@@ -37,6 +45,7 @@
     <div id="suggested-results" class="results-genres"></div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="/main.js"></script>
+    <script type="module" src="/main.js"></script>
+    <script type="module" src="/pagination.js"></script>
   </body>
 </html>
