working pagination for movies results, start working with loader, edit styles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
   <body>
     <h1 id="appname">vidget</h1>
+    <div class="loader-wrapper">
+      <div class="loader">
+        <div class="loader loader-inner"></div>
+      </div>
+    </div>
 
     <label for="searchMovie">Write title and find movie</label>
     <!-- search movie  -->
