--- a/calculator.html
+++ b/calculator.html
@@ -14,10 +14,8 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Sansita+Swashed:wght@300&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style-calculator.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Sansita:ital@1&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="style.css" />
 	
 		<script src="https://kit.fontawesome.com/e4b4fec820.js" crossorigin="anonymous"></script>
 </head>
@@ -25,22 +23,25 @@
 <body>
 
 	<div class="news">
-		<h2>Witaj! Dziś jest <span class="day"></span>. Czy wiesz, że...</h2>
+		<div>Witaj! Dziś jest <span class="day"></span>.</div>
+		<div>Czy wiesz, że...</div> 
 		<div class="curiosity"></div>
 	</div>
 
 	
 		<div class="wrapper">
+			<h1>Exchange Rate Converter</h1>
 			<div class="info">
 				<i class="fa-solid fa-palette"></i>
 				<i class="fa-solid fa-circle-info"></i>
+				<i class="fa-solid fa-floppy-disk"></i>
 			</div>
 			<div class="colors">
 				<div class="first color"></div>
 				<div class="second color"></div>
 				<div class="third color"></div>
 			</div>
-			<h1>Exchange Rate Converter</h1>
+			
 
 			<div class="converter-body">
 				<div class="left">
@@ -75,10 +76,7 @@
 			<p class="rate-info"></p>
 			<p class="total"></p>
 		</div>
-
 		
-
-
 	<div class="explanation">
 		<div class="modal">
 			<h3>Instrukcja:</h3>
@@ -102,7 +100,7 @@
 		</p>
 	</footer>
 
-	<script src="main2.js"></script>
+	<script src="main.js"></script>
 </body>
 
 </html>
