Search - action on click

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         <div class="section__container">
             <div class="section__header">
                 <h1> Check Character</h1>
-                <div class="search__container">
+                <form action="#" class="search__container">
                     <input type="search" id="site-search" class="input__form" name="q" placeholder="Enter full name of character.." >
-                    <button type="submit"><i class="fa-solid fa-magnifying-glass fa-2xl"></i></button>
+                    <button type="submit" id="btn__form"><i class="fa-solid fa-magnifying-glass fa-2xl"></i></button>
                     <!-- <button>Search</button> -->
-                </div>
+                </form>
             </div>
             <div class="character__data">
                 <!-- <div class="character__information">
@@ -136,6 +136,6 @@
 
     </div>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
