css and html changes

--- a/index_2_tibia.html
+++ b/index_2_tibia.html
@@ -11,6 +11,7 @@
 
 <body>
     <a href="index.html">Back to main</a>
+    <h1 id="page2_h1">Tibia news and information websites</h1>
     <div id="main_news"></div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
