changing the content of index.html and adding styles in style.css

--- a/index.html
+++ b/index.html
@@ -2,54 +2,49 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- tech mono font-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="style.css">
-  <title>Tibia News</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- tech mono font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Tibia News</title>
 </head>
 
 <body>
-  <section id="main_page_section1">
-    <p class="main_para">Welcome to the website dedicated to the online game Tibia.<br> Tibia is a 1997 massively
-      multiplayer online role-playing game (MMORPG) developed and published by CipSoft. It is one of the earliest and
-      longest-running MMORPGs, with its popularity peaking in 2007. It is a free game to download and play, though
-      players may pay to upgrade to a premium account, granting substantial in-game benefits. Tibia is a two-dimensional
-      tile-based game set in a fantasy world with pixel art graphics and a top-down perspective.</p>
-    <h1 id="main_header">CHOOSE A SECTION</h1>
-    <div id="main_div">
-      <div class="main_page_div">
-        <a href="index_2_tibia.html"><img src="image/logo-tibia.png" class="main_image"
-            alt="main image of Tibia informations"></a>
-        <p>TIBIA INFORMATIONS</p>
-      </div>
-      <div class="main_page_div">
-        <a href="index_3_tibia.html"><img src="image/tibia_char700.png" class="main_image"
-            alt=" main image of Tibia fansites"></a>
-        <p>TIBIA FANSITES</p>
-      </div>
-      <div class="main_page_div">
-        <a href="index_4_tibia.html"><img src="image/tibia_map_800.png" class="main_image"
-            alt="main image of Tibia worlds"></a>
-        <p>TIBIA WORLDS</p>
-      </div>
-      <div class="main_page_div">
-        <a href="index_5_tibia.html"><img src="image/monster_tibia.png" class="main_image"
-            alt="main image of Tibia monster"></a>
-        <p>TIBIA CREATURES</p>
-      </div>
-      <div class="main_page_div">
-        <a href="index_6_tibia.html"><img src="image/main_tibia.png" class="main_image"
-            alt=" main image of Tibia spells"></a>
-        <p>TIBIA LIST OF SPELLS</p>
-      </div>
-    </div>
-  </section>
+    <section id="main_page_section1">
+        <p class="main_para">Welcome to the website dedicated to the online game Tibia.Tibia is a 1997 massively
+            multiplayer online role-playing game (MMORPG) developed and published by CipSoft. It is one of the earliest
+            and longest-running MMORPGs, with its popularity peaking in 2007. It is a free game to download and play,
+            though players may pay to upgrade to a premium account, granting substantial in-game benefits. Tibia is a
+            two-dimensional tile-based game set in a fantasy world with pixel art graphics and a top-down perspective.
+        </p>
+        <h1 id="main_header">CHOOSE A SECTION</h1>
+        <div id="main_div">
+            <div class="main_page_div">
+                <a href="index_2_tibia.html"><img src="image/logo-tibia.png" class="main_image"
+                        alt="main image of Tibia informations">TIBIA INFORMATIONS</a>
+            </div>
+            <div class="main_page_div">
+                <a href="index_3_tibia.html"><img src="image/tibia_char700.png" class="main_image"
+                        alt=" main image of Tibia fansites">TIBIA FANSITES</a>
+            </div>
+            <div class="main_page_div">
+                <a href="index_4_tibia.html"><img src="image/tibia_map_800.png" class="main_image"
+                        alt="main image of Tibia worlds">TIBIA WORLDS</a>
+            </div>
+            <div class="main_page_div">
+                <a href="index_5_tibia.html"><img src="image/monster_tibia.png" class="main_image"
+                        alt="main image of Tibia monster">TIBIA CREATURES</a>
+            </div>
+            <div class="main_page_div">
+                <a href="index_6_tibia.html"><img src="image/main_tibia.png" class="main_image"
+                        alt=" main image of Tibia spells">TIBIA LIST OF SPELLS</a>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
