add section to html files and changin css file

--- a/index_3_tibia.html
+++ b/index_3_tibia.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <a href="index.html">Back to main</a>
-    <h1>Tibia fan pages</h1>
-    <div id="main"></div>
+    <section class="main_section">
+
+        <a href="index.html">Back to main</a>
+        <h1 id="page3_h1">Tibia fan pages</h1>
+        <div id="main"></div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="main_3_tibia.js"></script>
