--- a/index_4_tibia.html
+++ b/index_4_tibia.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
-    <a href="index.html">Back to main</a>
-    <div id="world"></div>
+    <section class="main_section">
+
+        <a href="index.html">Back to main</a>
+        <h1 id="page4_h1">Worlds of Tibia</h1>
+        <div id="world"></div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="main_4_tibia.js"></script>
 </body>
