--- a/index_2_tibia.html
+++ b/index_2_tibia.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-    <a href="index.html">Back to main</a>
-    <h1 id="page2_h1">Tibia news and information websites</h1>
-    <div id="main_news"></div>
-
+    <section class="main_section">
+        <a href="index.html">Back to main</a>
+        <h1 id="page2_h1">Tibia news and information websites</h1>
+        <div id="main_news"></div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="main.js"></script>
 </body>
