--- a/index_5_tibia.html
+++ b/index_5_tibia.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
-    <a href="index.html">Back to main</a>
-    <div id="monsterBox"></div>
+    <section class="main_section">
+        <a href="index.html">Back to main</a>
+        <h1 id="page5_h1">Creatures of Tibia</h1>
+        <div id="monsterBox"></div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="main_5_tibia.js"></script>
 </body>
