--- a/index_6_tibia.html
+++ b/index_6_tibia.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <a href="index.html">Back to main</a>
-    <h1>Spell list in Tibia</h1>
-    <div id="spellBox"></div>
+    <section class="main_section">
+
+        <a href="index.html">Back to main</a>
+        <h1 id="page6_h1">Spell list in Tibia</h1>
+        <div id="spellBox"></div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="main_6_tibia.js"></script>
