adding footer, changing main side image, add style in css file

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         alt="main image of Tibia informations">TIBIA INFORMATIONS</a>
             </div>
             <div class="main_page_div">
-                <a href="index_3_tibia.html"><img src="image/tibia_char700.png" class="main_image"
+                <a href="index_3_tibia.html"><img src="image/tibia_drag.png" class="main_image"
                         alt=" main image of Tibia fansites">TIBIA FANSITES</a>
             </div>
             <div class="main_page_div">
@@ -45,6 +45,7 @@
             </div>
         </div>
     </section>
+    <footer>Created in 2022 by <a href="https://github.com/Gerwix" target="_blank" id="myFooter">Mateusz Gerwazik</a></footer>
 </body>
 
 </html>
