--- a/index_4_tibia.html
+++ b/index_4_tibia.html
@@ -12,10 +12,11 @@
 <body>
     <section class="main_section">
 
-        <a href="index.html">Back to main</a>
+        <a href="index.html" id="back">Back to main</a>
         <h1 id="page4_h1">Worlds of Tibia</h1>
         <div id="world"></div>
     </section>
+    <footer>Created in 2022 by <a href="https://github.com/Gerwix" target="_blank" id="myFooter">Mateusz Gerwazik</a></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="main_4_tibia.js"></script>
 </body>
