--- a/index_6_tibia.html
+++ b/index_6_tibia.html
@@ -12,11 +12,11 @@
 <body>
     <section class="main_section">
 
-        <a href="index.html">Back to main</a>
+        <a href="index.html" id="back">Back to main</a>
         <h1 id="page6_h1">Spell list in Tibia</h1>
         <div id="spellBox"></div>
     </section>
-
+    <footer>Created in 2022 by <a href="https://github.com/Gerwix" target="_blank" id="myFooter">Mateusz Gerwazik</a></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="main_6_tibia.js"></script>
 
