--- a/calculator.html
+++ b/calculator.html
@@ -33,7 +33,6 @@
 			<div class="info">
 				<i class="fa-solid fa-palette"></i>
 				<i class="fa-solid fa-circle-info"></i>
-				<i class="fa-solid fa-floppy-disk"></i>
 			</div>
 			<div class="colors">
 				<div class="first color"></div>
@@ -44,7 +43,7 @@
 			<div class="converter-body">
 				<div class="left">
 					<input type="number" class="base-amount" placeholder="Wpisz wartość" min="0">
-					<select id="currency-one">
+					<select class ="new-select" id="currency-one">
 						<option value="EUR" selected>EUR</option>
 						<option value="USD">USD</option>
 						<option value="GBP">GBP</option>
@@ -78,10 +77,10 @@
 	<div class="explanation">
 		<div class="modal">
 			<h3>Instrukcja:</h3>
-			<p>1. Wybierz z menu rozwijanego z lewej strony walutę którą chcesz kupić</p>
-			<p>2. Wybierz z menu rozwijanego z prawej strony walutę którą chcesz wymienić</p>
-			<p>3. Przyciskiem możesz zamienić wybrane wcześniej waluty</p>
-			<p>Przyciskiem <i class="fa-solid fa-palette"></i> wybierz kolorystykę </p>
+			<p>1. Wybierz z menu rozwijanego z lewej strony walutę którą chcesz kupić.</p>
+			<p>2. Wybierz z menu rozwijanego z prawej strony walutę którą chcesz wymienić.</p>
+			<p>3. Przyciskiem możesz zamienić wybrane wcześniej waluty.</p>
+			<p>Przyciskiem <i class="fa-solid fa-palette"></i> wybierz kolorystykę.</p>
 			<p class="wishes">Życzymy samych udanych transakcji !</p>
 			<button class="close">Zamknij</button>
 		</div>
